# chunked

./: .gitignore  CMakeLists.txt
src/: application.cpp  application.h  dbaccess.cpp  dbaccess.h  goal.cpp  goal.h  goalsdataaccess.cpp  goalsdataaccess.h  habit.cpp  habit.h  main.cpp  progress.cpp  progress.h  task.cpp  task.h
src/icons/: icons.qrc
src/models/: basetablemodel.cpp  basetablemodel.h  goalnamestreeviewmodel.cpp  goalnamestreeviewmodel.h  goalstablemodel.cpp  goalstablemodel.h  habitstablemodel.cpp  habitstablemodel.h  taskstablemodel.cpp  taskstablemodel.h
src/qml/: Main.qml  qml.qrc
src/qml/body/: BodyView.qml
src/qml/body/components/: GoalItemDelegate.qml  PageHeader.qml  qmldir
src/qml/body/goals/: GoalsView.qml
src/qml/body/goals/active_goals/: ActiveGoalsView.qml
src/qml/common/components/: Colors.qml  ComboBox.qml  ContentIconLabel.qml  ContentIconLabelData.qml  DatePicker.qml  DateTimePickerDialog.qml  Dialog.qml  DrawerContent.qml  Globals.qml  GoalItemDelegate.qml  GoalNamesTreeViewComboBox.qml  IconButton.qml  ItemCreateEditDialog.qml  NavBar.qml  NavBarDelegate.qml  PageView.qml  ProgressBar.qml  RoundedPane.qml  StackPageView.qml  Stepper.qml  TaskItemDelegate.qml  TextField.qml  TimePicker.qml  Utils.js  qmldir
src/qml/common/components/buttons/: FloatingButton.qml  LinkButton.qml  MenuButton.qml  qmldir
src/qml/common/components/delegates/: GoalItemDelegate.qml  HabitItemDelegate.qml  TaskItemDelegate.qml  qmldir
src/qml/common/components/delegates/impl/: ItemDelegate.qml  MenuButton.qml
src/qml/common/components/inputs/: BasicTextField.qml  ComboBox.qml  GoalNamesTreeViewComboBox.qml  SpinBox.qml  qmldir
src/qml/common/views/goal_info/: GoalInfoView.qml  qmldir
src/qml/common/views/goal_info/views/: DescriptionView.qml  DetailsView.qml
src/qml/common/views/goals_body/: GoalsBodyView.qml  qmldir
src/qml/common/views/habits_body/: HabitsBodyView.qml  qmldir
src/qml/common/views/habits_body/components/: HabitItemDelegate.qml
src/qml/common/views/tasks_body/: TasksBodyView.qml  qmldir
src/qml/common/views/tasks_body/components/: CreateTaskTextField.qml  DurationPicker.qml  IconComboBox.qml  TaskItemDelegate.qml
src/qml/common/views/tasks_body/views/: FilterDrawerView.qml  FilterView.qml
src/qml/commonViews/: GoalsBodyView.qml  TasksBodyView.qml  qmldir
src/qml/commonViews/components/: CreateTaskTextField.qml  TaskItemDelegate.qml
src/qml/components/: AccentButton.qml  ApplicationWindow.qml  Button.qml  CheckBox.qml  CollapsibleTextField.qml  ColorScheme.qml  ComboBox.qml  Consts.qml  DatePicker.qml  DateTimeFramePicker.qml  Dialog.qml  GoalItemDelegate.qml  GoalNamesTreeViewComboBox.qml  ImagePicker.qml  ItemDelegate.qml  ListView.qml  Menu.qml  MenuItem.qml  ModalPopup.qml  Page.qml  PageHeader.qml  PageHeaderTitle.qml  PageTitleText.qml  Pane.qml  Popup.qml  ProgressBar.qml  ScrollBar.qml  ScrollView.qml  ScrollViewPane.qml  SpinBox.qml  Text.qml  TextArea.qml  TextField.qml  TimeFramePicker.qml  TimePicker.qml  Units.qml  Utils.js  qmldir
src/qml/components/impl/: DropShadow.qml  FadeEffect.qml  ScrollView.qml  qmldir
src/qml/imports/components/: HeaderTab.qml  PageView.qml  TopBar.qml
src/qml/popups/: CreateEditGoalPopup.qml  CreateGoalPopup.qml  Popups.qml  qmldir
src/qml/popups/components/: Button.qml  ColumnLayout.qml  ComboBox.qml  DatePicker.qml  FieldColumnLayout.qml  FieldLabel.qml  ImagePicker.qml  TextArea.qml  TimePicker.qml  TreeViewComboBox.qml
src/qml/popups/create_goal/: CreateGoalView.qml
src/qml/popups/goal_info/: DescriptionView.qml  GoalInfoView.qml  SubgoalsView.qml
src/qml/popups/goal_info/components/: SubgoalItemDelegate.qml
src/qml/side_menu/: SideMenuView.qml
src/qml/side_menu/components/: ItemDelegate.qml  MenuButton.qml
src/qml/views/goal_info/: GoalInfoView.qml
src/qml/views/goal_info/components/: ScrollView.qml  SubgoalItemDelegate.qml
src/qml/views/goal_info/views/: DescriptionView.qml  DetailsView.qml  HabitsView.qml  JournalView.qml  SubgoalsView.qml  TasksView.qml
src/qml/views/goals/: GoalsView.qml
src/qml/views/goals/components/: ContentIconLabel.qml  GoalItemDelegate.qml
src/qml/views/goals/views/: CreateGoalView.qml
src/qml/views/goals/views/components/: ComboBox.qml  FieldColumnLayout.qml  FormPane.qml  ImagePicker.qml
src/qml/views/goals/views/create_goal_view/: CreateGoalView.qml
src/qml/views/goals/views/goal_info_view/: GoalInfoView.qml
src/qml/views/habits/: HabitsView.qml
src/qml/views/header/: Header.qml
src/qml/views/home/: HomeView.qml
src/qml/views/home/components/: Page.qml
src/qml/views/journal/: JournalView.qml
src/qml/views/main/: MainView.qml
src/qml/views/main/views/goals/: GoalsView.qml
src/qml/views/popups/: Popups.qml
src/qml/views/reports/: ReportsView.qml
src/qml/views/reports/components/: DataSummaryCard.qml
src/qml/views/settings/: SettingsView.qml
src/qml/views/side_menu/: SideMenuDrawerView.qml  SideMenuView.qml
src/qml/views/side_menu/components/: ItemDelegate.qml  MenuButton.qml  MenuListView.qml
src/qml/views/tasks/: TasksView.qml
src/qml/views/top_bar/: TopBarView.qml
src/qml/views/top_bar/components/: Button.qml
src/qml/views/vision_board/: VisionBoardView.qml
(+44 files in other folders)
